# megabit

./: .gitignore  Cargo.toml  README.md  build.sh
.github/workflows/: coproc.yml  example-apps.yml  linux-apps.yml  wasm-frontends.yml
app-sdk/: Cargo.toml
app-sdk/megabit-wasm-macro/: Cargo.toml
app-sdk/megabit-wasm-macro/src/: lib.rs
app-sdk/src/: display.rs  host.rs  kv_store.rs  lib.rs  log.rs
console/backend/: Cargo.toml
console/backend/src/: main.rs  runner_client.rs  web_server.rs
console/frontend/: .gitignore  Cargo.toml  index.html
console/frontend/src/: main.rs  navbar.rs  websocket_provider.rs
console/frontend/src/providers/: app_config_provider.rs  mod.rs  msg_subscriber_provider.rs  websocket_provider.rs
console/frontend/src/tabs/: mod.rs
console/frontend/src/tabs/control/: mod.rs  next_app_button.rs  playback_button.rs  prev_app_button.rs  simulator_ui.rs
console/frontend/src/tabs/control/matrix_display/: buffer.rs  canvas.rs  mod.rs
console/frontend/src/tabs/control/runner_ui/: mod.rs  next_app_button.rs  playback_button.rs  prev_app_button.rs
console/frontend/src/utils/: button.rs  mod.rs
coproc-embassy/: Cargo.toml  build.rs  build.sh  flash.sh
coproc-embassy/.cargo/: config.toml
coproc-embassy/app/: Cargo.toml  build.rs
coproc-embassy/app/src/: main.rs
coproc-embassy/bootloader/: Cargo.toml  build.rs
coproc-embassy/bootloader/src/: main.rs
coproc-embassy/coproc-common/: Cargo.toml
coproc-embassy/coproc-common/src/: cobs_buffer.rs  lib.rs
coproc-embassy/coproc-common/src/display/: mod.rs
coproc-embassy/coproc-common/src/display/dot_matrix/: driver.rs  mod.rs
coproc-embassy/coproc-common/src/display/rgb_matrix/: driver.rs  mod.rs
coproc-embassy/coproc-common/src/msg_router/: display_cmd_router.rs  mod.rs  system_cmd_router.rs
coproc-embassy/coproc-common/src/system_state/: mod.rs
coproc-embassy/lib/bootload/: Cargo.toml
coproc-embassy/lib/bootload/src/: lib.rs
coproc-embassy/lib/bootload/tests/: full_app_cycle.rs
coproc-embassy/lib/crc32/: Cargo.toml
coproc-embassy/lib/crc32/src/: lib.rs
coproc-embassy/lib/memory/: Cargo.toml
coproc-embassy/lib/memory/src/: lib.rs
coproc-embassy/lib/pico-flash/: Cargo.toml
coproc-embassy/lib/pico-flash/src/: lib.rs
coproc-embassy/lib/rw-flash/: Cargo.toml
coproc-embassy/lib/rw-flash/src/: flash.rs  image.rs  lib.rs  nvs.rs
coproc-embassy/link/: app-a.x  app-b.x  app-layout.x  bootloader.x  memory.x
coproc-embassy/nano-ble-rgb/: Cargo.toml  memory.x
coproc-embassy/nano-ble-rgb/src/: main.rs
coproc-embassy/pi-pico-rgb/: Cargo.toml  build.rs
coproc-embassy/pi-pico-rgb/src/: main.rs
coproc-embassy/src/: lib.rs  usb.rs
coproc-embassy/src/display/: dot_matrix.rs  mod.rs  rgb_matrix.rs
coproc-embassy/src/display/dot_matrix/: driver.rs  mod.rs
coproc-embassy/src/display/rgb_matrix/: driver.rs  mod.rs
coproc-embassy/src/msg_router/: cmds.rs  display_cmd_router.rs  mod.rs  system_cmd_router.rs
coproc-embassy/src/system_state/: button.rs  mod.rs  rgb_led.rs
coproc-embassy/src/usb/: mod.rs  nrf.rs  responder.rs
docs/: architecture.md
example-apps/: README.md
example-apps/game-of-life/: Cargo.toml
example-apps/game-of-life/src/: conway.rs  lib.rs
example-apps/hello-world/: Cargo.toml
example-apps/hello-world/src/: lib.rs
example-apps/nyan-cat/: Cargo.toml
example-apps/nyan-cat/src/: lib.rs
example-apps/scrolling-text/: Cargo.toml
example-apps/scrolling-text/src/: lib.rs
runner/: ARCHITECTURE.md  Cargo.toml
runner/runner_msgs/: Cargo.toml
runner/runner_msgs/src/: lib.rs
runner/src/: api_server.rs  display.rs  events.rs  lib.rs  main.rs  serial.rs
runner/src/apps/: mod.rs
runner/src/cmd_queue/: mod.rs
runner/src/display/: mod.rs
runner/src/serial/: mod.rs  msg_inbox.rs
runner/src/streams/: api_server.rs  mod.rs
runner/src/streams/coproc_client/: mod.rs  msg_inbox.rs  tasks.rs
runner/src/transport/: connection.rs  mod.rs  msg_inbox.rs
runner/src/wasm_env/: app_manifest.rs  host_functions.rs  mod.rs
runner/src/wasm_env/host_functions/: display.rs  kv_store.rs  mod.rs
serial-protocol/: Cargo.toml
serial-protocol/src/: lib.rs
simulator/: Cargo.toml  README.md
simulator/backend/: Cargo.toml
simulator/backend/src/: main.rs
simulator/backend/src/backend/: display_buffer.rs  mod.rs  recorder.rs  serial.rs  simulator.rs  web_server.rs
simulator/frontend/: Cargo.toml  index.html
simulator/frontend/src/: main.rs
simulator/frontend/src/frontend/: debug_led.rs  gauss_filter.rs  matrix.rs  mod.rs  recording_buttons.rs  rgb_led.rs  user_button.rs  websocket_provider.rs
simulator/sim_msgs/: Cargo.toml
simulator/sim_msgs/src/: lib.rs
simulator/src/: main.rs  messages.rs
simulator/src/backend/: mod.rs  serial.rs  simulator.rs  web_server.rs
simulator/src/frontend/: matrix.rs  mod.rs  rgb_led.rs  user_button.rs  websocket_provider.rs
src/: main.rs  serial.rs
utils/: Cargo.toml
utils/coproc-build-utils/: Cargo.toml
utils/coproc-build-utils/src/: lib.rs
utils/image-builder/: Cargo.toml
utils/image-builder/src/: main.rs
utils/megabit-utils/: Cargo.toml
utils/megabit-utils/src/: ws_server.rs
utils/src/: lib.rs  rgb555.rs
