workspace = { members = ["megabit-wasm-macro"] }
[package]
name = "megabit-app-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.8.1"
extism-pdk = { version = "1.0", no-default-features = true }
log = "0.4"
megabit-wasm-macro = { path = "./megabit-wasm-macro" }
rmp-serde = "1.1"
serde = { version = "1", features = ["derive"] }