[workspace]
resolver = "2"
members = ["coproc-common", "app"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.5", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
] }
embassy-futures = { version = "0.1" }
embassy-sync = { version = "0.5" }
embassy-time = { version = "0.3" }
embassy-usb = { version = "0.1" }
megabit-coproc-common = { path = "coproc-common", features = ["defmt"] }
static_cell = "2"

[profile.release]
debug = 2
opt-level = "z"
lto = "fat"
codegen-units = 1
