[workspace]
resolver = "2"
members = [
    "coproc-common",
    "app",
    "bootloader",
    "lib/crc32",
    "lib/memory",
    "lib/rw-flash",
    "lib/bootload",
    "lib/pico-flash",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.5", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
] }
embassy-futures = { version = "0.1" }
embassy-sync = { version = "0.5" }
embassy-time = { version = "0.3" }
embassy-usb = { version = "0.1" }
megabit-coproc-common = { path = "coproc-common", features = ["defmt"] }
rp2040-hal = "0.12"
rp-pac = { version = "7.0", features = ["rp2040", "rt"] }
static_cell = "2"

bootload = { path = "lib/bootload" }
crc32 = { path = "lib/crc32" }
memory = { path = "lib/memory" }
pico-flash = { path = "lib/pico-flash" }
rw-flash = { path = "lib/rw-flash" }

coproc-build-utils = { path = "../utils/coproc-build-utils" }

[profile.release]
debug = 2
opt-level = "z"
lto = "fat"
codegen-units = 1
