[package]
name = "megabit-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-channel = "2.1"
clap = { version = "4.4", features = ["derive"] }
cobs = "0.2"
extism = "1.0"
inotify = "0.10"
megabit-serial-protocol = { path = "../serial-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }