[package]
name = "megabit-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
clap = { workspace = true }
cobs = "0.2"
extism = "1.0"
futures = "0.3"
hex = "0.4"
inotify = "0.10"
md-5 = "0.10"
megabit-runner-msgs = { path = "runner_msgs" }
megabit-serial-protocol = { workspace = true }
megabit-utils = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
tokio-serial = "5.4"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }