[package]
name = "megabit-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = { version = "2.1" }
axum = { version = "0.7.5", features = ["ws", "tokio"] }
futures-util = { version = "0.3" }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = { version = "0.1" }