[package]
name = "megabit-console-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1" }
axum = { version = "0.7.4" }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }