[package]
name = "megabit-console-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
clap = { workspace = true }
megabit-runner-msgs = { workspace = true }
megabit-utils = { workspace = true }
tokio = { workspace = true }
tower = { version = "0.4", features = ["util"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }