[package]
name = "megabit-console-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3" }
gloo = { version = "0.11", features = ["net"] }
gloo-net = { version = "0.5", features = ["websocket"] }
js-sys = "0.3"
log = { version = "0.4" }
megabit-runner-msgs = { path = "../../runner/runner_msgs" }
megabit-utils = { path = "../../utils" }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = { version = "0.4" }
wasm-logger = { version = "0.2" }
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "HtmlDivElement", "HtmlElement", "ImageData"]}
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"