[package]
name = "megabit-coproc-app"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
embassy-executor = { workspace = true, features = ["defmt"] }
embassy-futures.workspace = true
embassy-rp = { version = "0.1.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-sync = { workspace = true, features = ["defmt"] }
embassy-time = { workspace = true, features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-usb.workspace = true
megabit-coproc-common = { workspace = true, features = ["defmt"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
static_cell.workspace = true

[build-dependencies]
coproc-build-utils.workspace = true

[lints]
clippy.type_complexity = "allow"
