[package]
edition = "2021"
name = "megabit-coproc-common"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[features]
default = ["rgb_matrix"]
# Used for the monocolor display
dot_matrix = []
# Used for the full-color display
rgb_matrix = []
# Used to enable defmt
defmt = ["embassy-executor/defmt", "embassy-futures/defmt", "embassy-sync/defmt", "embassy-time/defmt", "embassy-time/defmt-timestamp-uptime", "embassy-usb/defmt"]

[dependencies]
cobs = { version = "0.2", default-features = false }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embassy-executor = { version = "0.5", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-futures = { version = "0.1" }
embassy-sync = { version = "0.5" }
embassy-time = { version = "0.3" }
embassy-usb = { version = "0.1" }
embassy-usb-driver = "0.1"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
static_cell = "2"
unroll = "0.1"

[profile.release]
debug = 2