[package]
name = "megabit-coproc-common"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
cobs = { version = "0.2", default-features = false }
cortex-m.workspace = true
embassy-executor.workspace = true
embassy-futures.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
embassy-usb.workspace = true
embassy-usb-driver = "0.1"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
static_cell.workspace = true

[features]
default = ["rgb_matrix"]
# Used for the monocolor display
dot_matrix = []
# Used for the full-color display
rgb_matrix = []
# Used to enable defmt
defmt = [
    "embassy-executor/defmt",
    "embassy-futures/defmt",
    "embassy-sync/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-usb/defmt",
]

[lints]
clippy.manual_async_fn = "allow"
