[package]
edition = "2021"
name = "megabit-coproc-pi-pico-rgb"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.5", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync = { version = "0.5", features = ["defmt"] }
embassy-time = { version = "0.3", features = ["defmt", "defmt-timestamp-uptime"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
static_cell = "2"

[profile.release]
debug = 2