[package]
name = "megabit-coproc-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1" }
async-channel = { version = "2.1" }
axum = { version = "0.7.4", features = ["ws"] }
axum-extra = { version = "0.9.1", features = ["typed-header"] }
clap = { version = "4.4", features = ["derive"] }
cobs = { version = "0.2" }
futures-util = { version = "0.3" }
megabit-serial-protocol = { path = "../../serial-protocol" }
megabit-sim-msgs = { path = "../sim_msgs" }
nix = { version = "0.27", features = ["term"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }