[package]
name = "megabit-coproc-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1" }
async-channel = { version = "2.1" }
clap = { version = "4.4", features = ["derive"] }
cobs = { version = "0.2" }
gif = "0.13"
megabit-serial-protocol = { path = "../../serial-protocol" }
megabit-sim-msgs = { path = "../sim_msgs" }
megabit-utils = { path = "../../utils", features = ["web-server"] }
nix = { version = "0.27", features = ["term"] }
rmp-serde = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7", features = ["v4"] }