[package]
name = "megabit-coproc-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { version = "0.3" }
gloo = { version = "0.11", features = ["net"] }
gloo-net = { version = "0.5", features = ["websocket"] }
log = { version = "0.4" }
megabit-sim-msgs = { path = "../sim_msgs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
wasm-logger = { version = "0.2" }
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "CanvasRenderingContext2d"] }
yew = { version = "0.21", features = ["csr"] }