[package]
name = "rw-flash"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
cortex-m = { workspace = true, optional = true }
crc32.workspace = true
memory.workspace = true
rp2040-hal = { workspace = true, optional = true }

[features]
hw = ["cortex-m", "rp2040-hal"]
